--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -70,7 +70,7 @@ html, body {
 .loading {
     border: 16px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid var(--rft-color-sec);
+    border-top: 16px solid var(--sb-secondary-color);
     width: 120px;
     height: 120px;
     -webkit-animation: spin 1s linear infinite;
@@ -80,7 +80,7 @@ html, body {
 .loading-small {
     border: 5px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 5px solid var(--rft-color-sec);
+    border-top: 5px solid var(--sb-secondary-color);
     width: 30px;
     height: 30px;
     -webkit-animation: spin 1s linear infinite;
@@ -382,7 +382,7 @@ input[type=number] {
 
 /* Navbar */
 .navbar {
-    border-bottom: 3px solid var(--rft-color-sec);
+    border-bottom: 3px solid var(--sb-secondary-color);
     padding-top: 0;
     padding-bottom: 0;
 }
