disable kode numbering column

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -66,6 +66,20 @@ html, body {
     color: #fbfbfb !important;
 }
 
+td {
+    position: relative;
+}
+
+td[disabled]::after {
+    cursor: not-allowed;
+    position: absolute;
+    content: '';
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
 /* Loading */
 .loading {
     border: 16px solid #f3f3f3;
